--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4.1.0
         with:
-          go-version: "^1.18"
+          go-version: "1.21"
+          check-latest: true
         env:
           GOOS: ${{ matrix.targetos }}
           GOARCH: ${{ matrix.arch }}
