--- a/app/app.yaml
+++ b/app/app.yaml
@@ -10,10 +10,16 @@ modules:
       end_blockers: [staking]
       # NOTE: The genutils module must occur after staking so that pools are properly initialized with tokens from genesis accounts.
       # NOTE: The genutils module must also occur after auth so that it can access the params from auth.
-      init_genesis: [auth, bank, distribution, staking, genutil]
+      init_genesis:
+        [consensus, accounts, auth, bank, distribution, staking, genutil]
       override_store_keys:
         - module_name: auth
           kv_store_key: acc
+        - module_name: accounts
+          kv_store_key: _accounts
+  - name: accounts
+    config:
+      "@type": cosmos.accounts.module.v1.Module
   - name: auth
     config:
       "@type": cosmos.auth.module.v1.Module
