--- a/app/app.yaml
+++ b/app/app.yaml
@@ -12,11 +12,16 @@ modules:
       # NOTE: The genutil module must also occur after auth so that it can access the params from auth.
       init_genesis:
         [consensus, accounts, auth, bank, distribution, staking, genutil]
+      gas_config:
+        validate_tx_gas_limit: 10000000
+        query_gas_limit: 100000
+        simulation_gas_limit: 100000
       override_store_keys:
         - module_name: auth
           kv_store_key: acc
         - module_name: accounts
           kv_store_key: _accounts
+      skip_store_keys: [tx, validate, genutil, runtime]
   - name: accounts
     config:
       "@type": cosmos.accounts.module.v1.Module
