--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
           minid start &
           MINID_PID=$!
           cnt=0
-          while ! minid query block --type=height 5; do
+          while ! minid query comet block --type=height 5; do
             cnt=$((cnt + 1))
             if [ $cnt -gt 30 ]; then
               kill -9 "$MINID_PID"
